scripts/nullaway/nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8.txt
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:17: error: [NullAway] @NonNull field curPos not initialized
    protected Position curPos;
                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:27: error: [NullAway] @NonNull field lastMovedDistance not initialized
    protected Numbers lastMovedDistance;
                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Exp.java:15: error: [NullAway] initializer method does not guarantee @NonNull field result (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Exp() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/IfThenElse.java:20: error: [NullAway] initializer method does not guarantee @NonNull field elseStmtList (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public IfThenElse(BooleanExp boolE, Stmt[] ifStmtList) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:16: error: [NullAway] initializer method does not guarantee @NonNull field result (line 14) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public BooleanExp(Exp e1, Booleans booleanValue, Exp e2) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Robot.java:76: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return varDecls.get(ident);
        ^
    (see http://t.uber.com/nullaway )
6 errors
